Add editorconfig, build against Java 17